--- a/model.ipynb
+++ b/model.ipynb
@@ -1296,7 +1296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test (Imputer Function)"
+    "### Test (Model)"
    ]
   },
   {
@@ -1308,7 +1308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train:  (498, 4) , validate:  (214, 4) , test:  (179, 4)\n",
+      "train:  (498, 5) , validate:  (214, 5) , test:  (179, 5)\n",
       "train:  (498, 1) , validate:  (214, 1) , test:  (179, 1)\n"
      ]
     }
@@ -1316,7 +1316,7 @@
    "source": [
     "df5 = prep_titanic_data(get_titanic_data())\n",
     "\n",
-    "X = df5[['pclass','embark_town','sex_cat','fare']]\n",
+    "X = df5[['pclass','alone','embark_town','sex_cat','age']]\n",
     "y = df5[['survived']]\n",
     "\n",
     "X_train_validate, X_test, y_train_validate, y_test = train_test_split(X, y, test_size = .20, random_state = 123)\n",
@@ -1349,11 +1349,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Logistic Regression classifier on training set: 0.79\n"
+     ]
+    }
+   ],
    "source": [
-    "logit5 = LogisticRegression(C=1, class_weight={1:2}, random_state = 123, solver='saga')\n",
+    "logit5 = LogisticRegression(C=1, random_state = 123, solver='lbfgs')\n",
     "logit5.fit(X_train, y_train)\n",
     "#make a prediction with traning data\n",
     "y_pred = logit5.predict(X_train)\n",
@@ -1364,16 +1372,104 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.82      0.83      0.82       302\n",
+      "           1       0.73      0.71      0.72       196\n",
+      "\n",
+      "    accuracy                           0.79       498\n",
+      "   macro avg       0.78      0.77      0.77       498\n",
+      "weighted avg       0.78      0.79      0.78       498\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute percision and support\n",
+    "print(classification_report(y_train, y_pred))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test Results for Simple Imputer\n",
+    "### Test Results for Simple Imputer : baseline = 0.68\n",
     "\n",
     "- Most_frequent : .68\n",
     "\n",
     "- Mean : 0.68\n",
     "\n",
-    "- Median: 0.68"
+    "- Median: 0.68\n",
+    "\n",
+    "Changes made no difference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Results for Change in Variable ('pclass','alone','embark_town','sex_cat','age') baseline =0.74\n",
+    "\n",
+    "- add sibsp 0.74\n",
+    "\n",
+    "- add parch 0.73\n",
+    "\n",
+    "- add fare 0.68"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Results for Change in Function Peameters\n",
+    "\n",
+    "- C = 1 = 0.76\n",
+    "  - (c=100 : 0.76 ), (c=0.001: 0.41)\n",
+    "\n",
+    "- class_weight = 0.74\n",
+    "  - ( removed: 0.76 )\n",
+    "\n",
+    "- random_state (Constant)\n",
+    "\n",
+    "- Solver\n",
+    "  - ('newton-cg':0.79 ) \n",
+    "  - ('lbfgs': 0.79)\n",
+    "  - ('liblinear': 0.78) \n",
+    "  - ('sag': 0.78)\n",
+    "  - ('saga': 0.76)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Results(penalty) baseline = 0.79\n",
+    "Newton\n",
+    "- None :0.79\n",
+    "- l1 : NA\n",
+    "- l2: 0.79\n",
+    "- elasticnet: NA\n",
+    "\n",
+    "lbfgs\n",
+    "- none: 0.79\n",
+    "- l1: NA\n",
+    "- l2:0.79\n",
+    "- elasticnet: NA\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1381,6 +1477,188 @@
    "metadata": {},
    "source": [
     "### 4. Choose you best model and evaluate it on the test dataset. Is it overfit?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- I found that the top models were returned when I used five independent variables along with the newton and lbfgs solver.  I pland on using these two solvers for my final model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train:  (498, 5) , validate:  (214, 5) , test:  (179, 5)\n",
+      "train:  (498, 1) , validate:  (214, 1) , test:  (179, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test Model (newton-cg) #6\n",
+    "df6 = prep_titanic_data(get_titanic_data())\n",
+    "\n",
+    "X = df6[['pclass','alone','embark_town','sex_cat','age']]\n",
+    "y = df6[['survived']]\n",
+    "\n",
+    "X_train_validate, X_test, y_train_validate, y_test = train_test_split(X, y, test_size = .20, random_state = 123)\n",
+    "\n",
+    "X_train, X_validate, y_train, y_validate = train_test_split(X_train_validate, y_train_validate, test_size = .30, random_state = 123)\n",
+    "\n",
+    "print(\"train: \", X_train.shape, \", validate: \", X_validate.shape, \", test: \", X_test.shape)\n",
+    "print(\"train: \", y_train.shape, \", validate: \", y_validate.shape, \", test: \", y_test.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "imp_mean = SimpleImputer( strategy='median')\n",
+    "imp_mean.fit(X_train)\n",
+    "X_train = imp_mean.transform(X_train)\n",
+    "\n",
+    "imp_mean = SimpleImputer( strategy='median')\n",
+    "imp_mean.fit(X_validate)\n",
+    "X_validate = imp_mean.transform(X_validate)\n",
+    "\n",
+    "imp_mean = SimpleImputer( strategy='median')\n",
+    "imp_mean.fit(X_test)\n",
+    "X_test = imp_mean.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logit6 = LogisticRegression(C=1, random_state = 123, solver='newton-cg')\n",
+    "logit6.fit(X_train, y_train)\n",
+    "#make a prediction with traning data\n",
+    "y_pred = logit6.predict(X_train)\n",
+    "#estimate prob of survival with training data\n",
+    "y_pred_proba = logit6.predict_proba(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train:  (498, 5) , validate:  (214, 5) , test:  (179, 5)\n",
+      "train:  (498, 1) , validate:  (214, 1) , test:  (179, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test Model (lbfgs) #7\n",
+    "df7 = prep_titanic_data(get_titanic_data())\n",
+    "\n",
+    "X = df7[['pclass','alone','embark_town','sex_cat','age']]\n",
+    "y = df7[['survived']]\n",
+    "\n",
+    "X_train_validate, X_test, y_train_validate, y_test = train_test_split(X, y, test_size = .20, random_state = 123)\n",
+    "\n",
+    "X_train, X_validate, y_train, y_validate = train_test_split(X_train_validate, y_train_validate, test_size = .30, random_state = 123)\n",
+    "\n",
+    "print(\"train: \", X_train.shape, \", validate: \", X_validate.shape, \", test: \", X_test.shape)\n",
+    "print(\"train: \", y_train.shape, \", validate: \", y_validate.shape, \", test: \", y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "imp_mean = SimpleImputer( strategy='median')\n",
+    "imp_mean.fit(X_train)\n",
+    "X_train = imp_mean.transform(X_train)\n",
+    "\n",
+    "imp_mean = SimpleImputer( strategy='median')\n",
+    "imp_mean.fit(X_validate)\n",
+    "X_validate = imp_mean.transform(X_validate)\n",
+    "\n",
+    "imp_mean = SimpleImputer( strategy='median')\n",
+    "imp_mean.fit(X_test)\n",
+    "X_test = imp_mean.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logit7 = LogisticRegression(C=1, random_state = 123, solver='newton-cg')\n",
+    "logit7.fit(X_train, y_train)\n",
+    "#make a prediction with traning data\n",
+    "y_pred = logit7.predict(X_train)\n",
+    "#estimate prob of survival with training data\n",
+    "y_pred_proba = logit7.predict_proba(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Evaluate Models #6 and #7 on Validate Sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred6 = logit6.predict(X_validate)\n",
+    "y_pred7 = logit7.predict(X_validate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model 1\n",
+      " 0.7990654205607477\n",
+      "model 3\n",
+      " 0.7990654205607477\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"model 1\\n\", logit6.score(X_validate, y_validate))\n",
+    "print(\"model 3\\n\", logit7.score(X_validate, y_validate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"model 1\\n\", confusion_matrix(y_validate, y_pred1))\n",
+    "\n",
+    "print(\"model 3\\n\", confusion_matrix(y_validate, y_pred3))"
    ]
   },
   {
