Import testing new functions

--- a/import_testing.ipynb
+++ b/import_testing.ipynb
@@ -46,6 +46,32 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 1.        , 0.        , 0.18063784],\n",
+       "       [0.5       , 1.        , 1.        , 0.        , 0.20584899],\n",
+       "       [1.        , 1.        , 1.        , 1.        , 0.35081306],\n",
+       "       ...,\n",
+       "       [1.        , 1.        , 1.        , 1.        , 0.35081306],\n",
+       "       [1.        , 1.        , 1.        , 1.        , 0.29408799],\n",
+       "       [1.        , 1.        , 1.        , 1.        , 0.34451027]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -61,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +99,7 @@
     }
    ],
    "source": [
-    "logit = LogisticRegression(C=1, random_state = 123, solver='newton-cg')\n",
+    "logit = LogisticRegression(C=1, class_weight={1:.8}, random_state = 123, solver='lbfgs')\n",
     "logit.fit(X_train, y_train)\n",
     "#make a prediction with traning data\n",
     "y_pred = logit.predict(X_train)\n",
