--- a/model.ipynb
+++ b/model.ipynb
@@ -4922,7 +4922,69 @@
     "                   rounded=True,\n",
     "                   filled=True)\n",
     "\n",
-    "fig.savefig(\"decistion_tree.pdf\")\n"
+    "fig.savefig(\"decistion_tree.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'titanic_decision_tree_2.pdf'"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Better Visualization, Easier to See\n",
+    "train, validate, test = prep_titanic_data_beta(get_titanic_data())\n",
+    "X = test[['pclass', 'age', 'alone', 'embark_town', 'sex_cat','sibsp','parch','fare']]\n",
+    "y = test.survived\n",
+    "\n",
+    "clf = DecisionTreeClassifier(max_depth = 8, random_state=1234)\n",
+    "model = clf.fit(X, y)\n",
+    "\n",
+    "import graphviz\n",
+    "from graphviz import Graph\n",
+    "\n",
+    "dot_data = export_graphviz(model,\n",
+    "                           feature_names= X.columns,  \n",
+    "                           class_names= {0:'not survived', 1:'survived'},\n",
+    "                           rounded=True,\n",
+    "                           filled=True,\n",
+    "                           out_file=None) \n",
+    "\n",
+    "graph = graphviz.Source(dot_data) \n",
+    "\n",
+    "graph.render('titanic_decision_tree_2', view=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dtreeviz.trees import dtreeviz # remember to load the package\n",
+    "\n",
+    "train, validate, test = prep_titanic_data_beta(get_titanic_data())\n",
+    "X = test[['pclass', 'age', 'alone', 'embark_town', 'sex_cat','sibsp','parch','fare']]\n",
+    "y = test.survived\n",
+    "\n",
+    "clf = DecisionTreeClassifier(max_depth = 8, random_state=1234)\n",
+    "model = clf.fit(X, y)\n",
+    "\n",
+    "\n",
+    "viz = dtreeviz(clf, X, y,\n",
+    "                target_name=\"target\",\n",
+    "                feature_names=X.columns,\n",
+    "                class_names={0:'not survived', 1:'survived'})\n"
    ]
   },
   {
@@ -4930,14 +4992,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "viz\n",
+    "viz.save(\"viz_decision_tree.svg\")"
+   ]
   }
  ],
  "metadata": {
