--- a/model.ipynb
+++ b/model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import precision_score\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -4582,25 +4584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Decision Tree classifier on test data set: 0.85\n",
-      "[[102   8]\n",
-      " [ 18  51]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.85      0.93      0.89       110\n",
-      "           1       0.86      0.74      0.80        69\n",
-      "\n",
-      "    accuracy                           0.85       179\n",
-      "   macro avg       0.86      0.83      0.84       179\n",
-      "weighted avg       0.86      0.85      0.85       179\n",
-      "\n"
+      "Accuracy of Decision Tree classifier on test data set: 0.85\n"
      ]
     }
    ],
@@ -4616,42 +4607,219 @@
     "y_pred_proba = clf.predict_proba(X_test4)\n",
     "\n",
     "print('Accuracy of Decision Tree classifier on test data set: {:.2f}'\n",
-    "     .format(clf.score(X_test4, y_test)))\n",
-    "\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
-    "\n",
-    "print(classification_report(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Not Survived/Not Survived\n",
-    "tp Rate = 102/179 = 0.569\n",
-    "#### Not Survived/Survived\n",
-    "fp Rate = 8/179 = 0.045\n",
-    "#### Survived / Not Survived\n",
-    "fn Rate = 18/179 = 0.101\n",
-    "#### Survived / Survived\n",
-    "tn Rate = 51/179 = 0.285"
+    "     .format(clf.score(X_test4, y_test)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(179, 8)\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.93      0.89       110\n",
+      "           1       0.86      0.74      0.80        69\n",
+      "\n",
+      "    accuracy                           0.85       179\n",
+      "   macro avg       0.86      0.83      0.84       179\n",
+      "weighted avg       0.86      0.85      0.85       179\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(X_test4.shape)"
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[102   8]\n",
+      " [ 18  51]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save confusion matrix and slice into four pieces\n",
+    "confusion = confusion_matrix(y_test, y_pred)\n",
+    "print(confusion)\n",
+    "#[row, column]\n",
+    "TP = confusion[1, 1]\n",
+    "TN = confusion[0, 0]\n",
+    "FP = confusion[0, 1]\n",
+    "FN = confusion[1, 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classification Accuracy: Overall, how often is the classifier correct?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8547486033519553\n",
+      "0.8547486033519553\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use float to perform true division, not integer division\n",
+    "print((TP + TN) / float(TP + TN + FP + FN))\n",
+    "print(accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classification Error: Overall, how often is the classifier incorrect?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1452513966480447\n",
+      "0.14525139664804465\n"
+     ]
+    }
+   ],
+   "source": [
+    "classification_error = (FP + FN) / float(TP + TN + FP + FN)\n",
+    "\n",
+    "print(classification_error)\n",
+    "print(1 - accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sensitivity: When the actual value is positive, how often is the prediction correct?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7391304347826086\n",
+      "0.7391304347826086\n"
+     ]
+    }
+   ],
+   "source": [
+    "sensitivity = TP / float(FN + TP)\n",
+    "\n",
+    "print(sensitivity)\n",
+    "print(recall_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Specificity: When the actual value is negative, how often is the prediction correct?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9272727272727272\n"
+     ]
+    }
+   ],
+   "source": [
+    "specificity = TN / (TN + FP)\n",
+    "print(specificity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### False Positive Rate: When the actual value is negative, how often is the prediction incorrect?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.07272727272727272\n",
+      "0.07272727272727275\n"
+     ]
+    }
+   ],
+   "source": [
+    "false_positive_rate = FP / float(TN + FP)\n",
+    "print(false_positive_rate)\n",
+    "print(1 - specificity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Precision: When a positive value is predicted, how often is the prediction correct?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.864406779661017\n",
+      "0.864406779661017\n"
+     ]
+    }
+   ],
+   "source": [
+    "precision = TP / float(TP + FP)\n",
+    "print(precision)\n",
+    "print(precision_score(y_test, y_pred))"
    ]
   },
   {
@@ -4971,6 +5139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Very cool visualiztion that breaks data down in to cool charts\n",
     "from dtreeviz.trees import dtreeviz # remember to load the package\n",
     "\n",
     "train, validate, test = prep_titanic_data_beta(get_titanic_data())\n",
@@ -4996,6 +5165,20 @@
     "viz\n",
     "viz.save(\"viz_decision_tree.svg\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
