Confusion Matrix Extravaganza

--- a/model.ipynb
+++ b/model.ipynb
@@ -5726,10 +5726,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of random forest classifier on training set: 0.87\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model #1 (Scaled)\n",
+    "train, validate, test = prep_titanic_data_3(get_titanic_data())\n",
+    "X_train_1 = train[['pclass', 'age', 'alone', 'embark_town', 'sex_cat','sibsp','parch','fare']]\n",
+    "y_train = train.survived\n",
+    "\n",
+    "knn1 = KNeighborsClassifier(n_neighbors=5, weights='uniform')\n",
+    "\n",
+    "knn1.fit(X_train_1, y_train)\n",
+    "\n",
+    "# Estimate whether or not a passenger would survive, using the training data\n",
+    "y_pred_1 = rf.predict(X_train_1)\n",
+    "\n",
+    "print('Accuracy of random forest classifier on training set: {:.2f}'\n",
+    "     .format(knn1.score(X_train_1, y_train)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5740,10 +5763,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of knn classifier 1 on train set: 0.87\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.29      0.43       307\n",
+      "           1       0.44      0.91      0.59       191\n",
+      "\n",
+      "    accuracy                           0.53       498\n",
+      "   macro avg       0.64      0.60      0.51       498\n",
+      "weighted avg       0.68      0.53      0.49       498\n",
+      "\n",
+      "[[ 89 218]\n",
+      " [ 18 173]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy of knn classifier 1 on train set: {:.2f}'\n",
+    "     .format(knn1.score(X_train1, y_train)))\n",
+    "\n",
+    "print(classification_report(y_train, y_pred_1))\n",
+    "\n",
+    "print(confusion_matrix(y_train, y_pred_1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5754,10 +5803,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 89 218]\n",
+      " [ 18 173]]\n",
+      "Classification Accuracy: Overall, how often is the classifier correct\n",
+      "0.5261044176706827\n",
+      "0.5261044176706827\n",
+      "Classification Error: Overall, how often is the classifier incorrect\n",
+      "0.4738955823293173\n",
+      "0.4738955823293173\n",
+      "Sensitivity: When the actual value is positive, how often is the prediction correct\n",
+      "0.9057591623036649\n",
+      "0.9057591623036649\n",
+      "Specificity: When the actual value is negative, how often is the prediction correct\n",
+      "0.2899022801302932\n",
+      "False Positive Rate: When the actual value is negative, how often is the prediction incorrect\n",
+      "0.7100977198697068\n",
+      "0.7100977198697068\n",
+      "Precision: When a positive value is predicted, how often is the prediction correct\n",
+      "0.4424552429667519\n",
+      "0.4424552429667519\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.29      0.43       307\n",
+      "           1       0.44      0.91      0.59       191\n",
+      "\n",
+      "    accuracy                           0.53       498\n",
+      "   macro avg       0.64      0.60      0.51       498\n",
+      "weighted avg       0.68      0.53      0.49       498\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "confusion = confusion_matrix(y_train, y_pred_1)\n",
+    "print(confusion)\n",
+    "#[row, column]\n",
+    "TP = confusion[1, 1]\n",
+    "TN = confusion[0, 0]\n",
+    "FP = confusion[0, 1]\n",
+    "FN = confusion[1, 0]\n",
+    "\n",
+    "# Classification Accuracy: Overall, how often is the classifier correct?\n",
+    "\n",
+    "# use float to perform true division, not integer division\n",
+    "print(\"Classification Accuracy: Overall, how often is the classifier correct\")\n",
+    "print((TP + TN) / float(TP + TN + FP + FN))\n",
+    "print(accuracy_score(y_train, y_pred_1))\n",
+    "\n",
+    "# Classification Error: Overall, how often is the classifier incorrect?\n",
+    "\n",
+    "classification_error = (FP + FN) / float(TP + TN + FP + FN)\n",
+    "print(\"Classification Error: Overall, how often is the classifier incorrect\")\n",
+    "print(classification_error)\n",
+    "print(1 - accuracy_score(y_train, y_pred_1))\n",
+    "\n",
+    "# Sensitivity: When the actual value is positive, how often is the prediction correct?\n",
+    "\n",
+    "sensitivity = TP / float(FN + TP)\n",
+    "print(\"Sensitivity: When the actual value is positive, how often is the prediction correct\")\n",
+    "print(sensitivity)\n",
+    "print(recall_score(y_train, y_pred_1))\n",
+    "\n",
+    "# Specificity: When the actual value is negative, how often is the prediction correct?\n",
+    "\n",
+    "specificity = TN / (TN + FP)\n",
+    "print(\"Specificity: When the actual value is negative, how often is the prediction correct\")\n",
+    "print(specificity)\n",
+    "\n",
+    "# False Positive Rate: When the actual value is negative, how often is the prediction incorrect?\n",
+    "\n",
+    "false_positive_rate = FP / float(TN + FP)\n",
+    "print(\"False Positive Rate: When the actual value is negative, how often is the prediction incorrect\")\n",
+    "print(false_positive_rate)\n",
+    "print(1 - specificity)\n",
+    "\n",
+    "# Precision: When a positive value is predicted, how often is the prediction correct?\n",
+    "\n",
+    "precision = TP / float(TP + FP)\n",
+    "print(\"Precision: When a positive value is predicted, how often is the prediction correct\")\n",
+    "print(precision)\n",
+    "print(precision_score(y_train, y_pred_1))\n",
+    "\n",
+    "print(classification_report(y_train, y_pred_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tn, fp, fn, tp = confusion_matrix(y_train, y_pred_1).ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(89, 218, 18, 173)"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tn, fp, fn, tp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 89, 218],\n",
+       "       [ 18, 173]])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_train, y_pred_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tn, fp, fn, tp = confusion_matrix(y_train, y_pred_1, labels = [1,0]).ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(173, 18, 218, 89)"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tn, fp, fn, tp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[173,  18],\n",
+       "       [218,  89]])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_train, y_pred_1, labels = [1,0])"
+   ]
   },
   {
    "cell_type": "markdown",
